<resources>
    <string name="app_name">Aboxs Apps</string>

    <string name="open">Open</string>
    <string name="close">Close</string>

    <string name="forgot_password">Forgot Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="data_register">Data Register</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="password">Password</string>
    <string name="re_password">Re-Password</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="nik_ktp">KTP Number</string>
    <string name="full_name">Full Name</string>
    <string name="address">Address</string>

    <string name="home">Home</string>
    <string name="transfer">Transfer</string>
    <string name="biller_payment">Biller Payment</string>
    <string name="logout">Logout</string>
    <string name="e_money">E-Money</string>
    <string name="social_media">Social Media</string>
    <string name="office">Office</string>
    <string name="please_wait">Please Wait...</string>


    <string name="choice_city">Select Your City</string>
    <string name="choice_date">Select Date</string>
    <string name="waktu_sholat">Waktu Sholat Daerah-Daerah</string>
    <string name="dialog_do_you_want_to_exit">Do you want to Exit ?</string>
    <string name="created_by">Created by : Syahrul Hajji</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
