<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background_mesjid"
    tools:context="com.aboxs.template_android.fragment.HomeFragment">
    <LinearLayout
        android:layout_marginBottom="5dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:textColor="@color/colorPrimary"
            android:gravity="center"
            android:textSize="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/waktu_sholat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/tv_select_your_city"
            android:layout_marginTop="10dp"
            android:hint="@string/choice_city"
            android:gravity="center"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:drawableRight="@drawable/ic_arrow_drop_down"
            android:background="@drawable/et_oval"
            android:layout_width="match_parent"
            android:layout_height="35dp" />
        <TextView
            android:id="@+id/tv_select_date"
            android:layout_marginTop="10dp"
            android:hint="@string/choice_date"
            android:gravity="center"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:drawableRight="@drawable/ic_arrow_drop_down"
            android:background="@drawable/et_oval"
            android:layout_width="match_parent"
            android:layout_height="35dp" />
        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_schedule_sholat"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"></android.support.v7.widget.RecyclerView>
    </LinearLayout>

</LinearLayout>
